# beguile

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
examples/: Makefile.am  Makefile.in
examples/hooks/: Makefile.am  Makefile.in  hooks.c
examples/i18n/: Makefile.am  Makefile.in  spanish.c
examples/stack/: Makefile.am  Makefile.in  stack.c  stack.h  stack_context.c  stack_feature.c
examples/tags/: tags_.c
features/: .gitignore  Makefile.am  Makefile.in  backgrounds.c  hooks.c  signals.c
release/: Makefile.am  Makefile.in  beguile.h  beguile_min.h
src/: .gitignore  Makefile.am  Makefile.in  beguile.h  core.h  footer.h  header.h  info.h.in  lang_en.h  lang_es.h  options.h  package.h  package.h.in  signals.h  style.h  tags.h  util.h
tests/: .gitignore  Makefile.am  Makefile.in  asserts.c  asserts.erb  backgrounds.c  feature.c  fork.c  hooks.c  options.c  tags.c  tags.erb  test.c
tests/stack/: Makefile.am  stack.c  stack.h  stack_context.c  stack_feature.c
